--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Xipe-Sistemas Inteligentes",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0"
   }
